Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-8741

mrShardedOutput.js failing on multiple platforms - ensure transferMods after commit

    • ALL

      RHEL 5.7 Enterprise Build:

      http://buildbot-special.10gen.com/builders/Nightly%20Linux%2064-bit%20Subscription%20RHEL%205.7/builds/293/steps/shell_3/logs/stdio

       m30999| Tue Feb 26 11:58:11.614 [Balancer] Refreshing MaxChunkSize: 1
       m30999| Tue Feb 26 11:58:11.614 [Balancer] skipping balancing round because balancing is disabled
      Count is 199999
       m30999| Tue Feb 26 11:58:17.639 [Balancer] Refreshing MaxChunkSize: 1
       m30999| Tue Feb 26 11:58:17.639 [Balancer] skipping balancing round because balancing is disabled
      Count is 199999
      assert.soon failed: function () { var c = testDB.foo.find().itcount();
                                       print( "Count is " + c );
                                       return c == numDocs; }, msg:Setup FAILURE: Count did not become correct after 30 seconds
      Error: Printing Stack Trace
          at printStackTrace (src/mongo/shell/utils.js:37:7)
          at doassert (src/mongo/shell/assert.js:6:1)
          at Function.assert.soon (src/mongo/shell/assert.js:110:48)
          at /data/buildslaves/Linux_64bit_Subscription_RHEL_57_Nightly/mongo/jstests/sharding/mrShardedOutput.js:75:16
      Tue Feb 26 11:58:19.138 JavaScript execution failed: assert.soon failed: function () { var c = testDB.foo.find().itcount();
                                       print( "Count is " + c );
                                       return c == numDocs; }, msg:Setup FAILURE: Count did not become correct after 30 seconds at src/mongo/shell/assert.js:L7
      

      Issue is inserts occurring during the critical section of a migrate not being replicated to the to shard.

            Assignee:
            greg_10gen Greg Studer (Inactive)
            Reporter:
            ian@mongodb.com Ian Whalen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: