hacking at SERVER-8741 -- log more verbosely for testing